--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "livewire/livewire": "^2.11",
         "spatie/laravel-permission": "^5.9",
         "twbs/bootstrap-icons": "^1.10"
     },
