--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
         "fruitcake/laravel-cors": "^2.0",
         "genert/bbcode": "^1.1",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.7",
         "jeroennoten/laravel-adminlte": "^3.8",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
+        "laravelcollective/html": "^6.3",
         "livewire/livewire": "^2.11",
         "spatie/laravel-permission": "^5.9",
         "twbs/bootstrap-icons": "^1.10"
