--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravelcollective/html": "^6.3",
         "livewire/livewire": "^2.11",
         "spatie/laravel-permission": "^5.9",
-        "twbs/bootstrap-icons": "^1.10"
+        "twbs/bootstrap-icons": "^1.10",
+        "ckeditor/ckeditor": "4.*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
